--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,11 +2,14 @@ aiosmtpd==1.4.6
 asgiref==3.8.1
 atpublic==5.0
 attrs==24.2.0
+cffi==1.17.1
+cryptography==43.0.3
 Django==5.1.2
 django-debug-toolbar==4.4.6
 django-environ==0.11.2
 django-pictures==1.3.3
-mysqlclient==2.2.5
 pillow==11.0.0
+pycparser==2.22
+PyMySQL==1.1.1
 sqlparse==0.5.1
 typing_extensions==4.12.2
