--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,13 @@
 aiosmtpd==1.4.6
 asgiref==3.8.1
-atpublic==5.0
-attrs==24.3.0
+atpublic==5.1
+attrs==25.1.0
+beautifulsoup4==4.12.3
 cffi==1.17.1
 cryptography==44.0.0
-Django==5.1.4
-django-debug-toolbar==4.4.6
-django-environ==0.11.2
+Django==5.1.5
+django-debug-toolbar==5.0.1
+django-environ==0.12.0
 django-pictures==1.4.0
 pillow==11.1.0
 pycparser==2.22
