--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ atpublic==5.1
 attrs==25.1.0
 beautifulsoup4==4.12.3
 cffi==1.17.1
+coverage==7.6.10
 cryptography==44.0.0
 Django==5.1.5
 django-debug-toolbar==5.0.1
