pip install soupsieve

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,5 +13,6 @@ django-pictures==1.4.0
 pillow==11.1.0
 pycparser==2.22
 PyMySQL==1.1.1
+soupsieve==2.6
 sqlparse==0.5.3
 typing_extensions==4.12.2
