--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,11 +2,11 @@ aiosmtpd==1.4.6
 asgiref==3.8.1
 atpublic==5.1
 attrs==25.1.0
-beautifulsoup4==4.12.3
+beautifulsoup4==4.13.3
 cffi==1.17.1
 coverage==7.6.10
 cryptography==44.0.0
-Django==5.1.5
+Django==5.1.6
 django-debug-toolbar==5.0.1
 django-environ==0.12.0
 django-pictures==1.4.0
@@ -16,3 +16,4 @@ PyMySQL==1.1.1
 soupsieve==2.6
 sqlparse==0.5.3
 typing_extensions==4.12.2
+whitenoise==6.9.0
