--- a/frontend/portfolio-react-app/package.json
+++ b/frontend/portfolio-react-app/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "help": "^3.0.2",
     "i18next-browser-languagedetector": "^8.0.3",
     "prop-types": "^15.8.1",
     "react-i18next": "^15.4.1"
@@ -22,7 +23,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "i18next": "^24.2.2",
+    "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.0.3",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
@@ -30,6 +31,6 @@
     "react-i18next": "^15.4.1",
     "react-router-dom": "^7.1.5",
     "sass": "^1.85.0",
-    "vite": "^6.1.0"
+    "vite": "^6.3.5"
   }
 }
